# inkterop

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  mkdocs.yml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/binaries/: inkterop-daemon-aarch64-apple-darwin
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: daemon.rs  lib.rs
core/: README.md  pyproject.toml
core/launchd/: com.inkterop.watch.plist  com.rminterop.watch.plist  install.sh
core/packaging/: build-sidecar.sh  entry.py  inkterop-daemon.spec
core/scripts/: ab_check.py  calib_summary.py  calibrate_visualdiff.py  erase_audit.py  fit_render_laws.py
core/src/inkterop/: __init__.py  cli.py  config.py  convert.py  mirror.py
core/src/inkterop/formats/: __init__.py  _scale.py  base.py  boox.py  excalidraw.py  inkml.py  inkz.py  irjson.py  isf.py  pencilkit.py  sdocx.py  tldraw.py  uim.py
core/src/inkterop/ir/: __init__.py  defaults.py  model.py  renderrule.py  serialize.py  style.py  tools.py
core/src/inkterop/render/: __init__.py  pdf.py  primitives.py  svg.py
core/src/inkterop/sync/: __init__.py  daemon.py  engine.py  rules.py  sinks.py  sources.py
core/src/inkterop/visual/: README.md  __init__.py  diff.py  png.py  raster.py
core/src/rminterop/: __init__.py  cli.py  config.py  library.py  mirror.py  pens.py  render.py
core/src/rminterop/formats/: inkml.py  irjson.py
core/src/rminterop/ir/: channels.py  defaults.py  model.py  serialize.py
core/src/rminterop/render/: primitives.py
core/tests/: conftest.py  test_boox.py  test_core.py  test_excalidraw.py  test_golden_remarkable.py  test_goodnotes.py  test_goodnotes_writer.py  test_inkml.py  test_inkz.py  test_ir.py  test_isf.py  test_nebo.py  test_notability.py  test_ntb_writer.py  test_onenote.py  test_pkdrawing.py  test_remarkable_writer.py  test_renderrule.py  test_saber.py  test_sdocx.py  test_supernote.py  test_supernote_writer.py  test_svg.py  test_svg_reader.py  test_sync.py  test_tldraw.py  test_uim.py  test_uim_writer.py  test_visual_crossapp.py  test_visual_golden.py  test_xopp.py
core/tests/fixtures/boox/: README.md  boox-synthetic.note  make_fixture.py
core/tests/fixtures/excalidraw/: README.md  scribble.excalidraw
core/tests/fixtures/goodnotes/: README.md  gn-mac-mixed-pens.goodnotes
core/tests/fixtures/isf/: README.md  highlighter.isf  make_fixture.py  pen-pressure-tilt.isf  xy-only.isf
core/tests/fixtures/nebo/: nebo-ipad-pen-highlighter.nebo
core/tests/fixtures/notability/: scribbles.ntb
core/tests/fixtures/pkdrawing/: README.md  case00-empty.pkdrawing  case00-empty.truth.json  case01-dot.pkdrawing  case01-dot.truth.json  case04-pressure-ramp.pkdrawing  case04-pressure-ramp.truth.json  case06-inks.pkdrawing  case06-inks.truth.json
core/tests/fixtures/remarkable/: ballpoint-grown-page.rm  ballpoint-small.rm  calligraphy-marker-paintbrush-shader.rm  fineliner-mechpencil-paintbrush.rm  fineliner-pencil-colors.rm  highlighter-marker-pencil.rm  landscape-fineliner.rm  landscape-highlighter.rm  manifest.json
core/tests/fixtures/saber/: README.md  saber-mac-pens-text.sba
core/tests/fixtures/sdocx/: README.md  make_fixture.py  synthetic-two-page.sdocx
core/tests/fixtures/supernote/: README.md  make_fixture.py  synthetic-landscape.note  synthetic-two-page.note
core/tests/fixtures/svg/: README.md
core/tests/fixtures/tldraw/: README.md  two-pages.tldr
core/tests/fixtures/uim/: README.md  make_fixture.py  two-strokes-pressure.uim
docs/: ir.md  (+13 more)
(+88 files in other folders)
