[project]
name = "rminterop"
version = "0.1.0"
description = "Read the reMarkable desktop cache, render faithful PDFs, mirror to iCloud Drive"
requires-python = ">=3.12"
dependencies = [
    "rmscene>=0.8.0",
    "pikepdf>=9.0",
    "reportlab>=4.0",
    "watchdog>=4.0",
    "supernotelib>=0.7.1",
]

[project.scripts]
rminterop = "rminterop.cli:main"

[dependency-groups]
dev = [
    "hypothesis>=6.156.4",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rminterop"]
