[project]
name = "inkterop"
version = "0.1.0"
description = "Universal converter between handwritten-note formats: reMarkable, GoodNotes, Notability, Supernote, Saber, Xournal++, InkML, SVG, PDF"
readme = "README.md"
license = "MIT"
authors = [{ name = "Caleb (cable729)" }]
keywords = ["remarkable", "goodnotes", "notability", "supernote", "handwriting", "ink", "inkml", "e-ink", "converter"]
requires-python = ">=3.12"
dependencies = [
    "rmscene>=0.8.0",
    "pikepdf>=9.0",
    "reportlab>=4.0",
    "watchdog>=4.0",
    "supernotelib>=0.7.1",
    "pillow>=10",
    "pypdfium2>=4.30",
    "numpy>=1.26",
    "tomlkit>=0.15.0",
]

[project.scripts]
inkterop = "inkterop.cli:main"

[dependency-groups]
dev = [
    "hypothesis>=6.156.4",
    "pytest>=8.0",
    # Wacom's Apache-2.0 reference implementation (imports as `uim`):
    # TEST-ONLY oracle for the UIM writer; never a runtime dependency.
    "universal-ink-library>=2.1",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inkterop"]
